--- a/core/pom.xml
+++ b/core/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+	    <dependency>
+		  <groupId>org.mockito</groupId>
+		  <artifactId>mockito-core</artifactId>
+		  <version>3.4.6</version>
+		</dependency>
     </dependencies>
 
     <properties>
