--- a/fam/pom.xml
+++ b/fam/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>commons-io</artifactId>
             <scope>test</scope>
         </dependency>
+	    <dependency>
+		  <groupId>org.mockito</groupId>
+		  <artifactId>mockito-core</artifactId>
+		  <version>3.4.6</version>
+		</dependency>
     </dependencies>
 
     <properties>
